unpackaged/main/default/objects/Milestone1_Time__c/Milestone1_Time__c.object-meta.xml
<CustomObject>
    <description>Force.com Labs - PM - A time entry record which allows users to log times against milestone tasks.</description>
    <label>Time</label>
    <nameField>
        <displayFormat>PT{0000}</displayFormat>
        <label>Project Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>