unpackaged/main/default/objects/Milestone1_Time__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>The date the time was incurred. Defaults to today if left blank.</inlineHelpText>
    <label>Date Incurred</label>
    <type>Date</type>
</CustomField>