unpackaged/main/default/objects/Milestone1_Time__c/fields/Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>Incurred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who incurred the time being charged. Defaults to current user if left blank.</inlineHelpText>
    <label>Incurred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Times_Incurred</relationshipName>
    <type>Lookup</type>
</CustomField>